# cppcon2023

./: .gitignore  .gitmodules  CMakeLists.txt  abstract.md  all.sh  allocator.h  arena_allocator.h  build.sh  build_and_run.sh  cg_all.sh  common.h  dijkstras.cpp  dijkstras.h  dijkstras_0.cpp  dijkstras_0.h  dijkstras_1.cpp  dijkstras_1.h  dijkstras_2.cpp  dijkstras_2.h  dijkstras_3.cpp  dijkstras_3.h  graph.h  main.cpp  perf_stat_all.sh  run.sh  run_demo.cpp  version.cpp
common/cppcon/: arena_allocator.h  common.h
core/: CMakeLists.txt
core/include/cppcon/: dijkstras.h  search.h
demo/: CMakeLists.txt
demo/a0/include/cppcon/demo/a0/: context.h  graph.h  run.h
demo/a0/src/: graph.cpp  run.cpp
demo/a3/: CMakeLists.txt
demo/a3/include/cppcon/demo/a3/: context.h  graph.h  run.h
demo/a3/src/: graph.cpp  run.cpp
demo/a_viz/: CMakeLists.txt
demo/a_viz/include/cppcon/demo/a_viz/: context.h  graph.h  run.h
demo/a_viz/src/: context.cpp  graph.cpp  run.cpp
demo/common/: CMakeLists.txt
demo/common/include/cppcon/demo/: json.h  run.h  run_impl.ipp
demo/common/src/: json.cpp  run.cpp
demo/v0/: CMakeLists.txt
demo/v0/include/cppcon/demo/v0/: context.h  graph.h  run.h
demo/v0/src/: graph.cpp  run.cpp
demo/v1/: CMakeLists.txt
demo/v1/include/cppcon/demo/v1/: context.h  graph.h  run.h
demo/v1/src/: graph.cpp  run.cpp
demo/v2/: CMakeLists.txt
demo/v2/include/cppcon/demo/v2/: context.h  graph.h  run.h
demo/v2/src/: graph.cpp  run.cpp
demo/v3/include/cppcon/demo/v3/: context.h  graph.h  run.h
demo/v3/src/: graph.cpp  run.cpp
demo/viz/include/cppcon/demo/viz/: context.h  graph.h  run.h
demo/viz/src/: context.cpp  graph.cpp  run.cpp
demo/vn/: CMakeLists.txt
demo/vn/include/cppcon/demo/vn/: context.h  graph.h  run.h
demo/vn/src/: graph.cpp  run.cpp
old/: main.cpp
old/common/cppcon/: arena_allocator.h  common.h  json.h
old/v0/include/cppcon/v0/: dijkstras.h
old/v0/src/: dijkstras.cpp
old/v1/: CMakeLists.txt
old/v1/include/cppcon/v1/: dijkstras.h
old/v1/src/: dijkstras.cpp  dijkstras_json.cpp
old/v2/include/cppcon/v2/: dijkstras.h
old/v2/src/: dijkstras.cpp  dijkstras_json.cpp
old/v3/src/: dijkstras_json.cpp
old/v4/include/cppcon/v4/: dijkstras.h
old/v4/src/: dijkstras.cpp
old/v5/: CMakeLists.txt
old/v5/include/cppcon/v5/: dijkstras.h
old/v5/src/: dijkstras.cpp  dijkstras_json.cpp
old/v6/include/cppcon/v6/: dijkstras.h
old/v6/src/: dijkstras_json.cpp
py/: extract.py  run.py  ui.py
snippets/: multimap_equal_range.cpp
test_data/: extract.py  supermarketxcf.xcf
v0/: CMakeLists.txt
v0/include/cppcon/v0/: dijkstras.h
v0/src/: dijkstras.cpp  dijkstras_json.cpp
v1/include/cppcon/v1/: dijkstras.h
v1/src/: dijkstras.cpp  dijkstras_json.cpp
v2/: CMakeLists.txt
v2/include/cppcon/v2/: dijkstras.h
v2/src/: dijkstras.cpp  dijkstras_json.cpp
v3/: CMakeLists.txt
v3/include/cppcon/v3/: dijkstras.h
v3/src/: dijkstras.cpp  dijkstras_json.cpp
v4/: CMakeLists.txt
v4/include/cppcon/v4/: dijkstras.h
v4/src/: dijkstras.cpp  dijkstras_json.cpp
v5/include/cppcon/v5/: dijkstras.h
v5/src/: dijkstras.cpp
v6/: CMakeLists.txt
v6/src/: dijkstras.cpp
